--- a/css/front.css
+++ b/css/front.css
@@ -74,6 +74,22 @@ a {
 .description {
     display: none;
 }
+.pagination{
+	text-align : center;
+}
+.cusInnerPage{
+	border : 1px solid #dddddd;
+	padding : 4px 12px;
+	margin : -2px;
+	text-decoration : none;
+	font-style : normal;
+}
+a.cusInnerPage:hover{
+	background : #f5f5f5;
+}
+a.cusInnerPage:visited{
+	color : #0088cc;
+}
 
 @media (max-width: 450px) {
 ul {
