--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
   <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
     <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
     <img src="/imgs/my_face.jpg" alt="Car" style="margin-left:12%;margin-right:12%; margin-top:9%;margin-bottom:9%;width:76%;">
-    <li><a href="{{site.url}}/" class="w3-bar-item w3-button">Home</a></li>
+    <a href="{{site.url}}/" class="w3-bar-item w3-button">Home</a>
     <a href="#" class="w3-bar-item w3-button">Contents</a>
-    <a href="#" class="w3-bar-item w3-button">Categories</a>
+    <a href="{{site.url}}/_posts/next.html" class="w3-bar-item w3-button">Categories</a>
     <a href="#" class="w3-bar-item w3-button">About</a>
   </div>
   <div id="main">
