--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     <img src="/imgs/my_face.jpg" alt="Car" style="margin-left:12%;margin-right:12%; margin-top:9%;margin-bottom:9%;width:76%;">
     <a href="{{site.url}}/" class="w3-bar-item w3-button">Home</a>
     <a href="#" class="w3-bar-item w3-button">Contents</a>
-    <a href="{{site.url}}/_posts/next.html" class="w3-bar-item w3-button">Categories</a>
+    <a href="{{site.url}}/news.html" class="w3-bar-item w3-button">Categories</a>
     <a href="#" class="w3-bar-item w3-button">About</a>
   </div>
   <div id="main">
