--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
       <div class="content">
       {% if site.front_img %}
         <img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
+        {{content}}
       </div>
     </div>
   </div>
