--- a/css/front.css
+++ b/css/front.css
@@ -43,6 +43,17 @@ h3 {
     background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
+.custom {
+    padding-top: 100px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    background-color: rgba(255, 255, 255, 0);
+}
+.custom ul{
+}
+.custom li{
+}
 ul {
     list-style: none;
     padding: 0;
