--- a/css/front.css
+++ b/css/front.css
@@ -48,7 +48,7 @@ h3 {
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgb(255, 255, 255);
 }
 .custom ul{
 }
