--- a/css/front.css
+++ b/css/front.css
@@ -57,6 +57,7 @@ li .custom{
 }
 a .custom{
     padding-top: 40px;
+    font-family: Verdana, sans-serif;
     text-align: left;
     color: #000000;
 }
