--- a/css/front.css
+++ b/css/front.css
@@ -86,6 +86,7 @@ li:hover {
 }
 a {
     color: white;
+    padding: 15px;
     text-decoration: none;
 }
 .description {
@@ -116,6 +117,7 @@ a {
     border: 2px solid white;
     border-radius: 5px;
     color: white;
+    padding: 15px;
     padding-left: 30px;
     width: 70%;
 }
