--- a/css/front.css
+++ b/css/front.css
@@ -44,9 +44,12 @@ h3 {
     text-align: center;
 }
 div .custom {
+    padding-top: 40px;
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
+    font-family: Verdana, sans-serif;
+    text-align: left;
     background-color: rgb(255, 255, 255);
 }
 ul .custom{
