--- a/css/front.css
+++ b/css/front.css
@@ -48,6 +48,8 @@ div .custom {
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     font-family: Verdana, sans-serif;
     text-align: left;
     background-color: rgb(255, 255, 255);
