--- a/css/front.css
+++ b/css/front.css
@@ -40,6 +40,8 @@ h3 {
 .content {
     padding-top: 60px;
     padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
