--- a/css/front.css
+++ b/css/front.css
@@ -87,6 +87,7 @@ li:hover {
     background-color: rgba(0, 0, 0, 0.5);
 }
 a {
+    padding: 15px;
     color: white;
     text-decoration: none;
 }
