--- a/css/front.css
+++ b/css/front.css
@@ -119,6 +119,7 @@ a {
     border: 2px solid white;
     border-radius: 5px;
     color: white;
+    padding-top: 15px;
     padding-left: 30px;
     width: 70%;
 }
