--- a/css/front.css
+++ b/css/front.css
@@ -38,6 +38,8 @@ h3 {
     font-weight: thin;
 }
 .content {
+    padding-left:20px;
+    padding-right:20px;
     padding-top: 60px;
     padding-bottom: 40px;
     background-color: rgba(0, 0, 0, 0.5);
