--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,1 +1,36 @@
 
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{{ site.description }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"> {% if site.favicon_img %}
+  <link rel="shortcut icon" href="{{ site.favicon_img_path }}" /> {% endif %}
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ " /css/front.css " | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <style>
+    @import url(//fonts.googleapis.com/earlyaccess/nanumpenscript.css);
+    a.custom{ font-family: 'Nanum Pen Script', cursive;
+              font-weight:600;
+              font-size:30pt;
+    }
+  </style>
+</head>
+<body>
+    <div class="w3-container">
+      <div class="content">
+        <div class="custom">
+          {% if site.front_img %}<img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
+          <ul class="custom">
+            {% for news in site.posts %}
+              <a class="custom" href="{{ news.url }}">{{ news.title }}</a>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
+    </div>
+</body>
