--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,16 +21,51 @@
   </style>
 </head>
 <body>
+  <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+    <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
+    <img src="/imgs/my_face.jpg" alt="Car" style="margin-left:12%;margin-right:12%; margin-top:9%;margin-bottom:9%;width:76%;">
+    <a href="{{site.url}}" class="w3-bar-item w3-button">Home</a>
+    <a href="#" class="w3-bar-item w3-button">Contents</a>
+    <a href="/categories" class="w3-bar-item w3-button">Categories</a>
+    <a href="#" class="w3-bar-item w3-button">About</a>
+  </div>
+  <div id="main">
+    <div class="w3-teal" style="background-color: black;">
+      <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+      <div class="w3-container" style="background-color: black;">
+        <h1>My Page</h1>
+      </div>
+    </div>
+  
     <div class="w3-container">
       <div class="content">
         <div class="custom">
           {% if site.front_img %}<img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
           <ul class="custom">
             {% for news in site.posts %}
-              <a class="custom" href="{{ news.url }}">{{ news.title }}</a>
+            <a class="custom">
+              {{ content }}
+            </a>
             {% endfor %}
           </ul>
         </div>
       </div>
     </div>
+    
+  
+  </div>
+  <script>
+    function w3_open() {
+      document.getElementById("main").style.marginLeft = "20%";
+      document.getElementById("mySidebar").style.width = "20%";
+      document.getElementById("mySidebar").style.display = "block";
+      document.getElementById("openNav").style.display = 'none';
+    }
+
+    function w3_close() {
+      document.getElementById("main").style.marginLeft = "0%";
+      document.getElementById("mySidebar").style.display = "none";
+      document.getElementById("openNav").style.display = "inline-block";
+    }
+  </script>
 </body>
