--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,9 +43,7 @@
           {% if site.front_img %}<img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
           <ul class="custom">
             {% for news in site.posts %}
-            <a class="custom">
-              {{ content }}
-            </a>
+            <a class="custom">{{ content }}</a>
             {% endfor %}
           </ul>
         </div>
