--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,9 +42,7 @@
         <div class="custom">
           {% if site.front_img %}<img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
           <ul class="custom">
-            {% for news in site.posts %}
-            <a class="custom">{{ content }}</a>
-            {% endfor %}
+            {{ content }}
           </ul>
         </div>
       </div>
