--- a/css/front.css
+++ b/css/front.css
@@ -89,7 +89,7 @@ li:hover {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.5);
 }
-a {
+a .fa{
     padding: 15px;
     color: white;
     text-decoration: none;
