--- a/css/front.css
+++ b/css/front.css
@@ -126,6 +126,7 @@ a {
     width: 70%;
 }
 a:hover {
+    text-decoration: none;
     -webkit-transition: 500ms;
     -moz-transition: 500ms;
     transition: 500ms;
