--- a/css/front.css
+++ b/css/front.css
@@ -87,7 +87,7 @@ li:hover {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.5);
 }
-a .fa{
+a {
     padding: 15px;
     color: white;
     text-decoration: none;
