--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
     <div class="w3-teal" style="background-color: black;">
       <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
       <div class="w3-container" style="background-color: black;">
-        <h1>My Page</h1>
+        <h1>Categories</h1>
       </div>
     </div>
   
