--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,9 @@
         <div class="custom">
           {% if site.front_img %}<img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
           <ul class="custom">
-            {{ content }}
+            <div class="blog_layer">
+              {{ content }}
+            <div>
           </ul>
         </div>
       </div>
