--- a/css/front.css
+++ b/css/front.css
@@ -37,6 +37,13 @@ h3 {
     padding-bottom: 20px;
     font-weight: thin;
 }
+.blog_layer{
+  position:absolute;
+  top:50%;
+  left:50%;
+  width:60%;
+  margin:-30% 0 0 -30%;
+}
 .content {
     padding-left:20px;
     padding-right:20px;
