--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@
         <div class="custom">
           {% if site.front_img %}<img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
           <ul class="custom">
-            <div class="blog_layer">
+            <div style="margin-left:20%;margin-right:20%;">
               {{ content }}
             <div>
           </ul>
