--- a/css/front.css
+++ b/css/front.css
@@ -32,6 +32,10 @@ h1 {
     font-family: 'Open Sans';
     margin: -10px 0;
 }
+img {
+    width: auto;
+    hight: auto:
+}
 h3 {
     color: white;
     padding-bottom: 20px;
