--- a/css/front.css
+++ b/css/front.css
@@ -37,6 +37,12 @@ h3 {
     padding-bottom: 20px;
     font-weight: thin;
 }
+
+pre {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .content {
     padding-left:20px;
     padding-right:20px;
@@ -57,6 +63,13 @@ div .custom {
 li .custom{
     color: #000000;
 }
+
+a {
+    padding: 15px;
+    color: white;
+    text-decoration: none;
+}
+
 a .custom{
     text-decoration: none;
     font-family: 'Nanum Pen Script', cursive;
@@ -87,14 +100,13 @@ li:hover {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.5);
 }
-a {
-    padding: 15px;
-    color: white;
-    text-decoration: none;
-}
+
 .description {
     display: none;
 }
+
+
+
 @media (max-width: 450px) {
 ul {
     text-align: center;
