--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,4 +68,5 @@ comments: true
       document.getElementById("openNav").style.display = "inline-block";
     }
   </script>
+      <script id="dsq-count-scr" src="//https-ysw0421-github-io.disqus.com/count.js" async></script>
 </body>
