--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ comments: true
     <div class="w3-teal" style="background-color: black;">
       <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
       <div class="w3-container" style="background-color: black;">
-        <h1>My Page</h1>
+        <h1> ysw's blog </h1>
       </div>
     </div>
   
