--- a/css/front.css
+++ b/css/front.css
@@ -73,7 +73,7 @@ a {
 a .custom{
     text-decoration: none;
     font-family: 'Nanum Pen Script', cursive;
-    background: transparent; 
+    background-: transparent; 
     color: #000000;
 }
 
