--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ comments: true
         <div class="custom">
           {% if site.front_img %}<img src="{{ site.front_img_path }}" id="fullscreen"> {% endif %} 
           <ul class="custom">
-            <div style="margin-left:20%;margin-right:20%;">
+            <div style="margin-left:20%;margin-right:20%; background-color: transparent;">
               {{ content }}
               {% include disqus.html %}
             <div>
