--- a/css/front.css
+++ b/css/front.css
@@ -73,6 +73,7 @@ a {
 a .custom{
     text-decoration: none;
     font-family: 'Nanum Pen Script', cursive;
+    background-color: transparent;
     color: #000000;
 }
 
