--- a/css/front.css
+++ b/css/front.css
@@ -71,7 +71,7 @@ a {
     background-color: transparent;
 }
 
-a .custom{
+a .custom2{
     text-decoration: none;
     font-family: 'Nanum Pen Script', cursive;
     background-color: transparent;
