--- a/css/front.css
+++ b/css/front.css
@@ -51,7 +51,7 @@ pre {
     background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
-div .custom {
+.custom {
     padding-top: 20px;
     padding-left: 40px;
     padding-right: 40px;
@@ -60,8 +60,14 @@ div .custom {
     text-align: left;
     background-color: rgb(255, 255, 255);
 }
-li .custom{
+
+.custom2{
+    text-decoration: none;
+    font-family: 'Nanum Pen Script', cursive;
+    background-color: transparent;
     color: #000000;
+    padding-top: 0px;
+    padding-bottom: 0px;   
 }
 
 a {
@@ -71,16 +77,6 @@ a {
     background-color: transparent;
     padding-top: 0px;
     padding-bottom: 0px;    
-}
-
-a .custom2{
-    text-decoration: none;
-    font-family: 'Nanum Pen Script', cursive;
-    background-color: transparent;
-    color: #000000;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    
 }
 
 ul {
