--- a/css/front.css
+++ b/css/front.css
@@ -63,11 +63,13 @@ pre {
 
 .custom2{
     text-decoration: none;
-    font-family: 'Nanum Pen Script', cursive;
+    font-family: Verdana, sans-serif;
     background-color: transparent;
     color: #000000;
     padding-top: 0px;
-    padding-bottom: 0px;   
+    padding-bottom: 0px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 a {
