--- a/css/front.css
+++ b/css/front.css
@@ -72,6 +72,19 @@ pre {
     padding-right: 40px;
 }
 
+.list{
+    list-style: circle;
+}
+.list:hover{
+    text-decoration: none;
+    -webkit-transition: 500ms;
+    -moz-transition: 500ms;
+    transition: 500ms;
+    text-decoration: none;
+    list-style: disc;
+    background-color: transparent;
+}
+
 a {
     color: white;
     text-decoration: none;
