--- a/css/categories.css
+++ b/css/categories.css
@@ -105,7 +105,7 @@ ul:hover {
   border: 1px solid blue;
   border-radius: 50%;
   float: left;
-  padding: 2px;
+  margin: 10px;
 }
 
 .circle:hover {                 
@@ -114,7 +114,7 @@ ul:hover {
   background: blue;           
   border-radius: 100px;
   float: left;
-  padding: 2px;
+  margin: 10px;
 }    
 
 @media (max-width: 450px) {
