--- a/css/categories.css
+++ b/css/categories.css
@@ -105,7 +105,8 @@ ul:hover {
   border: 1px solid blue;
   border-radius: 50%;
   float: left;
-  margin: 10px;
+  margin-left: 40px;
+  margin-top: 10px;
 }
 
 .circle:hover {                 
@@ -114,7 +115,8 @@ ul:hover {
   background: blue;           
   border-radius: 100px;
   float: left;
-  margin: 10px;
+  margin-left: 40px;
+  margin-top: 10px;
 }    
 
 @media (max-width: 450px) {
