--- a/css/front.css
+++ b/css/front.css
@@ -79,10 +79,6 @@ a {
     padding-top: 15px;
 }
 
-ul {
-    list-style: none;
-    text-align: left;
-}
 li {
     border-radius: 100%;
     border: 2px solid white;
@@ -106,6 +102,45 @@ li:hover {
 .description {
     display: none;
 }
+
+
+ul{
+  list-style-type:circle  
+}
+ul:hover {
+  list-style-type:disc
+}
+
+.square {
+  transition: transform 0.8s;
+  position: absolute;
+}
+
+.square:hover {
+  transform: translate(20px, 0px);
+}
+
+.circle {
+  width: 10px;
+  height: 10px;
+  border: 1px solid blue;
+  border-radius: 50%;
+  float: left;
+  margin-left: 40px;
+  margin-top: 10px;
+}
+
+.circle:hover {                 
+  width: 10px;         
+  height: 10px;               
+  background: blue;           
+  border-radius: 100px;
+  float: left;
+  margin-left: 40px;
+  margin-top: 10px;
+}    
+
+
 
 
 @media (max-width: 450px) {
