--- a/css/categories.css
+++ b/css/categories.css
@@ -82,6 +82,21 @@ pre {
     display: none;
 }
 
+.out{
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    padding: 20px;
+    margin; 15px
+}
+
+.in{
+    display: inline-block;
+    width: 50%;
+    border: 1px solid red;
+    height: 100px;
+}
+
 ul{
   list-style-type:circle  
 }
