--- a/css/categories.css
+++ b/css/categories.css
@@ -85,7 +85,6 @@ pre {
 .out{
     width: 100%;
     text-align: center;
-    border: 1px solid black;
     padding: 20px;
     margin; 15px
 }
@@ -93,8 +92,7 @@ pre {
 .in{
     display: inline-block;
     width: 50%;
-    border: 1px solid red;
-    height: 100px;
+    height: 100%;
 }
 
 ul{
