--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
       </div>
     </div>
         {{content}}
+        {% include analytics.html %}
   </div>
   <script>
     function w3_open() {
