--- a/css/pageframe.css
+++ b/css/pageframe.css
@@ -1,1 +1,33 @@
-aa
+/*
+---------------------------
+카테고리: Categories
+날짜, 태그: Date, Tags
+
+posting한곳: Posting
+
+주제: MainTitle
+소제: SubTitle
+단락: Paragraph
+내용: Contents
+
+전체 코드 URL: CodeURL
+
+참고자료: Reference
+---------------------------
+*/
+.Categories{
+}
+.Posting{
+}
+.MainTitle{
+}
+.SubTitle{
+}
+.Paragraph{
+}
+.Contents{
+}
+.CodeURL{
+}
+.Reference{
+}
