--- a/css/pageframe.css
+++ b/css/pageframe.css
@@ -79,5 +79,22 @@ posting한곳: Posting
   text-decoration: underline;
   font-family: "Nanum Barun Gothic",Linux Libertine;
 }
-
+.Reference blockquote{
+    margin: 0 0 30px;
+    margin-left: -26px;
+    border-left: 3px solid #57ad68;
+    padding-left: 20px;
+}
+.Reference blockquote p{
+    letter-spacing: .01rem;
+    font-weight: 400;
+    font-style: italic;
+    padding-bottom: 3px;
+}
+.Reference p{
+    font-size: 1.2em;
+    line-height: 30px;
+    margin: 0;
+    padding-top: 15px;
+}
 /*media query*/
