--- a/css/pageframe.css
+++ b/css/pageframe.css
@@ -2,7 +2,7 @@
 ---------------------------
  - 중첩된 부분: BasicFontSet
 카테고리: Categories
-날짜, 태그: Date, Tags
+날짜, 태그: Date, Tags: post-tag
 
 posting한곳: Posting
 
@@ -33,6 +33,29 @@ posting한곳: Posting
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+}
+/*a*/
+.post-tag {
+    display: inline-block;
+    background: rgba(172,65,66,0.15);
+    padding: 0 .5rem;
+    border-radius: 4px;
+    font-family: "PT Sans",Helvetica,Arial,sans-serif;
+    font-size: 90%;
+    transition: all 0.1s ease-in-out;
+    color: #ac4142;
+    margin: .2em .3em;
+    line-height: 1.42857143;
+    text-rendering: optimizelegibility;
+} 
+.post-tag:before {
+        content: "\f02b";
+        font-family: FontAwesome;
+        padding-right: .5em;
+}
+.post-tag:hover {
+    background: #ac4142;
+    color: #fff;
 }
 /*blockquote p*/
 .Posting{
