--- a/css/pageframe.css
+++ b/css/pageframe.css
@@ -40,7 +40,7 @@ posting한곳: Posting
   padding: 0 .5rem;
   border-radius: 4px;
   font-family: "PT Sans",Helvetica,Arial,sans-serif;
-  font-size: 90%;
+  font-size: 16px;
   transition: all 0.1s ease-in-out;
   color: #ac4142;
   margin: .2em .3em;
