--- a/css/pageframe.css
+++ b/css/pageframe.css
@@ -33,8 +33,14 @@ posting한곳: Posting
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
-.Categories h3{
+h3{
   padding-bottom: 0px;
+}
+.date{
+  display: inline-block;
+  margin-top: -.5rem;
+  margin-bottom: 1rem;
+  color: #9a9a9a;
 }
 /*a*/
 .post-tag {
