--- a/css/categories.css
+++ b/css/categories.css
@@ -63,7 +63,7 @@ pre {
     padding-right: 40px;
     padding-bottom: 20px;
     font-family: Verdana, sans-serif;
-    text-align: left;
+    text-align: center;
     background-color: rgb(255, 255, 255);
 }
 
