--- a/css/pageframe.css
+++ b/css/pageframe.css
@@ -129,3 +129,114 @@ blockquote{
     padding-top: 15px;
 }
 /*media query*/
+/* 스마트폰 가로+세로 */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+ /* 스마트폰 가로 */
+@media only screen and (min-width : 321px) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+ /* 스마트폰 세로 */
+@media only screen and (max-width : 320px) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+/* iPhone4와 같은 높은 크기 세로 */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),  
+only screen and (min-device-pixel-ratio : 1.5) {  
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+/* iPhone4와 같은 높은 해상도 가로 */
+@media only screen and (min-width : 640px) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+/* iPad 가로+세로 */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+/* iPad 가로 */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+/* iPad 세로 */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+/* 데스크탑 브라우저 가로 */
+@media only screen and (min-width : 1224px) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
+
+/* 큰 모니터 */
+@media only screen and (min-width : 1824px) {
+img.concept {
+display: block;
+margin: 0 auto;
+width:80%;
+border-radius: 16px;
+border-style: none;
+}
+}
