--- a/css/pageframe.css
+++ b/css/pageframe.css
@@ -22,6 +22,9 @@ posting한곳: Posting
 .TableFont{
     font-family: "PT Sans",Helvetica,Arial,sans-serif;
 }
+tbody tr:nth-child(odd) td, tbody tr:nth-child(odd) th {
+    background-color: #f9f9f9;
+}
 th {
     font-weight: bold;
 }
