--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <a href="{{site.url}}" class="w3-bar-item w3-button">Home</a>
     <a href="#" class="w3-bar-item w3-button">Contents</a>
     <a href="/contents/categories" class="w3-bar-item w3-button" style="font-size:80%" >&emsp;Categories</a>
-    <a href="/contents/tags" class="w3-bar-item w3-button" style="font-size:80%" >&emsp;Tags</a>
+    <a href="/contents/projects" class="w3-bar-item w3-button" style="font-size:80%" >&emsp;Projects</a>
     <a href="#" class="w3-bar-item w3-button">About</a>
   </div>
   <div id="main">
