--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,8 @@ comments: true
     <a href="{{site.url}}" class="w3-bar-item w3-button">Home</a>
     <a href="#" class="w3-bar-item w3-button">Contents</a>
     <a href="/contents/categories" class="w3-bar-item w3-button" style="font-size:80%">&emsp;Categories</a>
-    <a href="/contents/tags" class="w3-bar-item w3-button" style="font-size:80%">&emsp;tags</a>
+    <a href="/contents/tags" class="w3-bar-item w3-button" style="font-size:80%">&emsp;Projects</a>
+    <a href="/contents/news" class="w3-bar-item w3-button" style="font-size:80%">&emsp;News</a>
     <a href="#" class="w3-bar-item w3-button">About</a>
   </div>
   <div id="main">
