--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     <a href="#" class="w3-bar-item w3-button">Contents</a>
     <a href="/contents/categories" class="w3-bar-item w3-button" style="font-size:80%" >&emsp;Categories</a>
     <a href="/contents/projects" class="w3-bar-item w3-button" style="font-size:80%" >&emsp;Projects</a>
+    <a href="/contents/news" class="w3-bar-item w3-button" style="font-size:80%" >&emsp;News</a>
     <a href="#" class="w3-bar-item w3-button">About</a>
   </div>
   <div id="main">
